Fix small layout issues (#7500)
* Fix layout bug

* Change position of red signing label

--- a/js-old/src/modals/CreateAccount/createAccount.css
+++ b/js-old/src/modals/CreateAccount/createAccount.css
@@ -45,6 +45,8 @@
 
       .description {
         flex: 1;
+        margin-top: 1em;
+        margin-left: 3em;
       }
     }
 
